tests/snapshots/trace_solver__spanshot_request@12721957493623043849.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "[ref mut x]: &mut [T]"
---
[ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref mut x @ &mut (*p).0: &mut T
// Applying rule `BindingBorrow`
x @ &mut &mut (*p).0: &mut &mut T
// Applying rule `Binding`
let x: &mut &mut T = &mut &mut (*p).0

// Final bindings (simplified):
let x: &mut &mut T = &mut &mut (*p).0
